[project]
name = "sausage"
version = "2025.05.1"
description = 'Command-line utility to capture the help/usage message from a program that has a command-line interface.'
readme = "README.md"
requires-python = ">=3.9"
license = {file = "LICENSE"}

[tool.ruff]
line-length = 88
indent-width = 4

[tool.ruff.lint]
select = [
    "A",    # flake8-builtins
    "B",    # flake8-bugbear
    "C4",   # flake8-comprehensions
    "E",    # pycodestyle errors
    "F",    # Pyfakes
    "FA",   # flake8-future-annotations
    "I",    # isort
    "ISC",  # flake8-implicit-str-concat
    "PERF", # Perflint
    "PL",   # Pylint
    "PTH",  # flake8-use-pathlib
    "PYI",  # flake8-pyi
    "RET",  # flake8-return
    "S",    # flake8-bandit
    "SIM",  # flake8-simplify
    "W"     # Warning
]
# ignore = ["ISC001"]
# extend-select = ["ALL"]

[tool.ruff.lint.per-file-ignores]
"**/test_*.py" = [
    "S101",    # assert
    "PLR2004", # magic value
]

[dependency-groups]
dev = [
    "pytest>=8.3.5",
    "ruff>=0.11.10",
]
